include/bcsv/bcsv_c_api.h

// Opaque handles for C++ objects
typedef void* bcsv_reader_t;
typedef void* bcsv_writer_t;
typedef void* bcsv_row_t;
typedef void* bcsv_layout_t;
typedef const void* const_bcsv_reader_t;
typedef const void* const_bcsv_writer_t;
typedef const void* const_bcsv_row_t;
typedef const void* const_bcsv_layout_t;
// Enum for column types must match bcsv::ColumnType!
typedef enum {
    BCSV_TYPE_BOOL   = 0,
    BCSV_TYPE_UINT8  = 1,
    BCSV_TYPE_UINT16 = 2,
    BCSV_TYPE_UINT32 = 3,
    BCSV_TYPE_UINT64 = 4,
    BCSV_TYPE_INT8   = 5,
    BCSV_TYPE_INT16  = 6,
    BCSV_TYPE_INT32  = 7,
    BCSV_TYPE_INT64  = 8,
    BCSV_TYPE_FLOAT  = 9,
    BCSV_TYPE_DOUBLE = 10,
    BCSV_TYPE_STRING = 11
} bcsv_type_t;
typedef enum {
    BCSV_FLAG_NONE   = 0,
    BCSV_FLAG_ZOH    = 1 << 0, // Write in ZoH format
} bcsv_file_flags_t;
// Layout API - Start
// These functions operate on layout objects, which define the schema of BCSV files
// Layouts can be shared between readers and writers
// Layouts can be modified dynamically (add/remove columns) or cloned
// Layouts can be compared for compatibility (same columns and types)
// Layouts can be queried for column count, names, and types
bcsv_layout_t   bcsv_layout_create          ();
bcsv_layout_t   bcsv_layout_clone           (const_bcsv_layout_t layout);
void            bcsv_layout_destroy         (bcsv_layout_t layout);
bool            bcsv_layout_has_column      (const_bcsv_layout_t layout, const char* name);
size_t          bcsv_layout_column_count    (const_bcsv_layout_t layout);
size_t          bcsv_layout_column_index    (const_bcsv_layout_t layout, const char* name);
const char*     bcsv_layout_column_name     (const_bcsv_layout_t layout, size_t index);
bcsv_type_t     bcsv_layout_column_type     (const_bcsv_layout_t layout, size_t index);
bool            bcsv_layout_set_column_name (bcsv_layout_t layout, size_t index, const char* name);
void            bcsv_layout_set_column_type (bcsv_layout_t layout, size_t index, bcsv_type_t type);
bool            bcsv_layout_add_column      (bcsv_layout_t layout, size_t index, const char* name, bcsv_type_t type);
void            bcsv_layout_remove_column   (bcsv_layout_t layout, size_t index);
void            bcsv_layout_clear           (bcsv_layout_t layout);
bool            bcsv_layout_isCompatible    (const_bcsv_layout_t layout1, const_bcsv_layout_t layout2);
void            bcsv_layout_assign          (bcsv_layout_t dest, const_bcsv_layout_t src);
// Layout API - End



// Reader API - Start
// These functions operate on reader objects, which read BCSV files row by row
// Readers can be opened in strict or resilient mode (handle schema mismatches)
// Readers provide access to the current row and its index
typedef enum {
    BCSV_READ_MODE_STRICT    = 0,
    BCSV_READ_MODE_RESILIENT = 1
} bcsv_read_mode_t;
bcsv_reader_t       bcsv_reader_create  (bcsv_read_mode_t mode);
void                bcsv_reader_destroy (bcsv_reader_t reader);
size_t              bcsv_reader_count_rows(const_bcsv_reader_t reader); // counts total rows in file (may be slow)
void                bcsv_reader_close   (bcsv_reader_t reader);
bool                bcsv_reader_open    (bcsv_reader_t reader, const char* filename);
bool                bcsv_reader_is_open (const_bcsv_reader_t reader);
const wchar_t*      bcsv_reader_filename(const_bcsv_reader_t reader);
const char*         bcsv_reader_filename(const_bcsv_reader_t reader);
const_bcsv_layout_t bcsv_reader_layout  (const_bcsv_reader_t reader);    // returns layout of opened file, or NULL if not open
bool                bcsv_reader_next    (bcsv_reader_t reader);          // returns 1 if row available, 0 if EOF
const_bcsv_row_t    bcsv_reader_row     (const_bcsv_reader_t reader);    // returns reference to internal row (no copy)
size_t              bcsv_reader_index   (const_bcsv_reader_t reader);    // returns current row index (0-based), number of rows read so far
// Reader API - End



// Writer API - Start
// These functions operate on writer objects, which write BCSV files row by row
// Writers can be opened in strict or resilient mode (handle schema mismatches)
// Writers provide access to the current row and its index
bcsv_writer_t       bcsv_writer_create  (bcsv_layout_t layout);
void                bcsv_writer_destroy (bcsv_writer_t writer);
void                bcsv_writer_close   (bcsv_writer_t writer);
void                bcsv_writer_flush   (bcsv_writer_t writer);
bool                bcsv_writer_open    (bcsv_writer_t writer, const char* filename, bool overwrite, int compress, int block_size_kb, bcsv_file_flags_t flags); // defaults: overwrite=false, compress=1, block_size_kb=64, flags=0
bool                bcsv_writer_is_open (const_bcsv_writer_t writer);
const wchar_t*      bcsv_writer_filename(const_bcsv_writer_t writer);
const char*         bcsv_writer_filename(const_bcsv_writer_t writer);
const_bcsv_layout_t bcsv_writer_layout  (const_bcsv_writer_t writer);             // returns layout
bool                bcsv_writer_next    (bcsv_writer_t writer);                   // writes current row, returns false on error
bcsv_row_t          bcsv_writer_row     (bcsv_writer_t writer);                   // returns reference to internal row (no copy)
size_t              bcsv_writer_index   (const_bcsv_writer_t writer);             // returns current row index (0-based), number of rows written so far
// Writer API - End


// Row API - Start
// Row lifecycle
bcsv_row_t          bcsv_row_create      (const_bcsv_layout_t layout);            // creates a new row with given layout
bcsv_row_t          bcsv_row_clone       (const_bcsv_row_t row);                  // creates a copy of an existing row
void                bcsv_row_destroy     (bcsv_row_t row);                        // destroys a row created with bcsv_row_create
void                bcsv_row_clear       (bcsv_row_t row);                        // clears all values in the row
void                bcsv_row_assign      (bcsv_row_t dest, const_bcsv_row_t src); // assigns src row data to dest row
// Change tracking
bool                bcsv_row_has_any_changes  (const_bcsv_row_t row);             // returns true if any column has been modified
bool                bcsv_row_tracks_changes   (const_bcsv_row_t row);             // returns true if change tracking is enabled
void                bcsv_row_set_changes      (bcsv_row_t row);                   // mark all columns as changed
void                bcsv_row_reset_changes    (bcsv_row_t row);                   // mark all columns as unchanged
// Single value access
const_bcsv_layout_t bcsv_row_layout     (const_bcsv_row_t row);                   // returns layout of the row
bool                bcsv_row_get_bool   (const_bcsv_row_t row, int col);
uint8_t             bcsv_row_get_uint8  (const_bcsv_row_t row, int col);
uint16_t            bcsv_row_get_uint16 (const_bcsv_row_t row, int col);
uint32_t            bcsv_row_get_uint32 (const_bcsv_row_t row, int col);
uint64_t            bcsv_row_get_uint64 (const_bcsv_row_t row, int col);
int8_t              bcsv_row_get_int8   (const_bcsv_row_t row, int col);
int16_t             bcsv_row_get_int16  (const_bcsv_row_t row, int col);
int32_t             bcsv_row_get_int32  (const_bcsv_row_t row, int col);
int64_t             bcsv_row_get_int64  (const_bcsv_row_t row, int col);
float               bcsv_row_get_float  (const_bcsv_row_t row, int col);
double              bcsv_row_get_double (const_bcsv_row_t row, int col);
const char*         bcsv_row_get_string (const_bcsv_row_t row, int col);
void                bcsv_row_set_bool   (bcsv_row_t row, int col, bool        value);
void                bcsv_row_set_uint8  (bcsv_row_t row, int col, uint8_t     value);
void                bcsv_row_set_uint16 (bcsv_row_t row, int col, uint16_t    value);
void                bcsv_row_set_uint32 (bcsv_row_t row, int col, uint32_t    value);
void                bcsv_row_set_uint64 (bcsv_row_t row, int col, uint64_t    value);
void                bcsv_row_set_int8   (bcsv_row_t row, int col, int8_t      value);